2010-10-14  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeObject): When printing XML nodes,
	only emit initial '#' if getReadableOutput().

2010-10-06  Per Bothner  <per@bothner.com>

	* MakeList.java (compile): Use getType rather than getReturnType.
	* GetModuleClass.java (compile): Likewise.
	* CompileMisc.java (getReturnType, getReturnTypeConvert): Removed.
	(validateApplyConstantFunction0): Visit 2nd argument in context
 	of type from 1st argument.

2010-10-04  Per Bothner  <per@bothner.com>

	* CompileArith.java (appropriateIntConstant, appropriateLongConstant):
	Take InlineCalls parameters, so we can simplify and use the new
	fixIntValue and fixLongValue methods - and get language-dependent types.
	(validateApplyArithOp): Update accordingly.
	(inRange): Remove methods moved elsewhere.

	* CompileNamedPart.java (GetNamedExp.validateApply): Don't prematurely
	call visitArgs.

2010-09-17  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateApplyToArgs): Add setLine calls.

2010-09-16  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java: Update validateApply methods, which no longer
	take a 'boolean argsInlined' parameter.
	* CompileMisc.java: Likewise.
	* CompileArith.java: Likewise.
	* CompileNamedPart.java: Likewise.

	* CompileMisc.java: Update for using VALIDATED flag instead
	of argsInlined boolean parameter.
	* CompileArith.java: Likewise.
	* CompileNamedPart.java: Likewise.
	* CompilationHelpers.java: Likewise.
	(validateApplyToArgs): Simplify without visiting arg.

2010-08-27  Per Bothner  <per@bothner.com>

	* ArithOp.java (op): New field.
	(<init>): New parameter, for setting op.
	(DIV, REM): Remove constants.
	(DIVIDE_GENERIC, DIVIDE_INEXACT, QUOTIENT, QUOTIENT_EXACT, MODULO):
	New constants.
	* DivideOp.java: Change to extend ArithOp.
	(GENERIC, DIVIDE_INEXACT, QUOTIENT, QUOTIENT_EXACT, MODULO):
	Remove constants - use the inherited ones instead.
	* DivideOp.java: Remove fields - now inherited.